--- a/ui.html
+++ b/ui.html
@@ -35,7 +35,7 @@
 <!-- Header -->
 <header class="bg-primary text-white text-center py-5">
     <div class="container">
-        <h1>Hi, Ini Yosua, Selamat Datang Ke Portofolio Saya</h1>
+        <h1>Hi, Ini (your name), welcome to my protfolio</h1>
         <div class="profile-picture mb-4">
             <img src="pp.jpeg" alt="Profile Picture" class="rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
         </div>
@@ -47,19 +47,7 @@
 <section id="about" class="py-5">
     <div class="container">
         <h2>About Me</h2>
-        <p>Nama saya Yosua Marcelinus, seorang mahasiswa di Fakultas Vokasi, 
-            Universitas Sumatera Utara. Spesialisasi saya di bidang teknik informatika telah membekali 
-            saya dengan keterampilan praktis dalam pengembangan web dan analisis data. Selama masa studi, 
-            saya telah berpartisipasi dalam beberapa proyek yang tidak hanya meningkatkan keterampilan teknis saya tetapi 
-            juga kemampuan untuk bekerja dalam tim dan memecahkan masalah secara efektif. Portofolio ini merupakan gambaran 
-            dari perjalanan profesional saya, menampilkan berbagai proyek dan pencapaian yang telah saya raih sejauh ini.</p>
-            <p>Saya adalah seorang individu yang bersemangat dalam belajar dan selalu terbuka untuk hal-hal baru. Pendidikan saya 
-                dimulai dari sekolah dasar hingga menengah di lingkungan yang mendukung pengembangan akademis dan keterampilan sosial. 
-                Setelah lulus, saya melanjutkan studi ke jenjang yang lebih tinggi, di mana saya mengambil jurusan yang sesuai dengan 
-                minat dan bakat saya. Selama masa sekolah, saya aktif dalam berbagai kegiatan ekstrakurikuler, terutama di bidang 
-                seni. Saya juga menikmati olahraga seperti bersepeda dan jogging untuk menjaga kebugaran. Di waktu luang, 
-                saya sering menghabiskan waktu dengan menonton film atau mendengarkan musik, serta menjelajahi hal-hal baru melalui internet 
-                atau media sosial. Hobi-hobi ini membantu saya menjaga keseimbangan antara kehidupan pribadi dan akademis.</p>
+        <p>description.</p>
     </div>
 </section>
 
@@ -72,7 +60,7 @@
                 <div class="card mb-4 shadow-sm">
                     <img src="a.jpeg" class="card-img-top" alt="Project 1">
                     <div class="card-body">
-                        <p class="card-text">Game Flappy Bird yang dikembangkan dengan Python, kemungkinan menggunakan pustaka Pygame untuk membuat grafik dan logika permainan. Proyek ini tidak hanya menunjukkan kemampuan pengembang dalam pemrograman, tetapi juga kemampuan desain untuk menciptakan pengalaman bermain yang menarik bagi pengguna.</p>
+                        <p class="card-text">description.</p>
                     </div>
                 </div>
             </div>
@@ -80,7 +68,7 @@
                 <div class="card mb-4 shadow-sm">
                     <img src="s.jpeg" class="card-img-top" alt="Project 2">
                     <div class="card-body">
-                        <p class="card-text">U-BANK yang dikembangkan dengan Java adalah aplikasi perbankan mobile yang dikembangkan untuk memberikan kemudahan bagi pengguna dalam mengelola keuangan mereka. Dengan antarmuka yang user-friendly, pengguna dapat dengan mudah melakukan berbagai transaksi, seperti cek saldo, transfer dana, dan pembayaran tagihan. Selain itu, U-BANK juga dilengkapi dengan fitur keamanan yang canggih, seperti verifikasi dua faktor dan enkripsi data, untuk melindungi data pengguna dari akses yang tidak sah.</p>
+                        <p class="card-text">description</p>
                     </div>
                 </div>
             </div>
@@ -89,7 +77,7 @@
                     <img src="ss.png" class="card-img-top" alt="Project 3">
                     <img src="aa.jpeg" class="card-img-top" alt="Project 3">
                     <div class="card-body">
-                        <p class="card-text">Among Us: The Enigma adalah sebuah proyek animasi 3D yang menggabungkan elemen misteri dan sci-fi. Cerita berpusat pada sekelompok karakter mirip Among Us yang terjebak dalam sebuah ruangan tanpa ingatan tentang bagaimana mereka sampai di sana. Dengan desain minimalis dan palet warna yang terbatas, proyek ini menciptakan suasana yang mencekam dan penuh teka-teki. Penonton diajak untuk memecahkan misteri bersama para karakter sambil menikmati keindahan visual yang dihasilkan oleh software Blender.</p>
+                        <p class="card-text">description.</p>
                     </div>
                 </div>
             </div>
