--- a/ui.html
+++ b/ui.html
@@ -39,7 +39,7 @@
         <div class="profile-picture mb-4">
             <img src="pp.jpeg" alt="Profile Picture" class="rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
         </div>
-        <p class="lead">Yosua Marcelinus Sinaga</p>
+        <p class="lead">Your name</p>
     </div>
 </header>
 
